# libpostal

./: .appveyor.yml  .bumpversion.cfg  .gitignore  .travis.yml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  ISSUE_TEMPLATE.md  LICENSE  Makefile  Makefile.am  Makefile.in  PULL_REQUEST_TEMPLATE.md  README.md  aclocal.m4  bootstrap.sh  catalog-info.yaml  config.h  config.h.in  config.status  configure  configure.ac  libpostal.def  libpostal.pc  libpostal.pc.in  libtool  setup.py  win_build.bat
.github/: CODEOWNERS  pull.yml
.github/linters/: .jscpd.json
.github/workflows/: add-labels-standardized.yaml  add-to-project-gdev-dependabot.yaml  add-to-project-gdev.yaml  add-to-project-senzing-dependabot.yaml  add-to-project-senzing.yaml  docker-builds.yaml  issue-automation.yaml  lint-workflows.yaml  move-pr-to-done-dependabot.yaml  test.yml
HTTPS:/: WWW.WAGGINTEL9.WORDPRESS.COM
assets/fpm-deb-scripts/: postinst.sh  postinst.sh.tpl
autom4te.cache/: output.0  output.3  requests  traces.0  traces.1  traces.2  traces.3
m4/: ax_blas.m4  ax_cblas.m4
python/postal/: expand.py  parser.py  pyexpand.c  pyparser.c
resources/addresses/: bg.yaml  bs.yaml  ca.yaml  cs.yaml  da.yaml  de.yaml  el.yaml  en.yaml  es.yaml  et.yaml  eu.yaml  fi.yaml  fr.yaml  he.yaml  hr.yaml  hu.yaml  is.yaml  it.yaml  ja.yaml  ja_rm.yaml  ko_rm.yaml  lt.yaml  lv.yaml  nb.yaml  nl.yaml  pl.yaml  pt.yaml  ro.yaml  ru.yaml  sk.yaml  sl.yaml  sr.yaml  sv.yaml  tr.yaml  uk.yaml  zh.yaml  zh_pinyin.yaml
resources/categories/: af.yaml  ar.yaml  br.tsv  br.yaml  ca.tsv  ca.yaml  cs.tsv  cs.yaml  de.yaml  de_at.yaml  en.tsv  en.yaml  es.tsv  es.yaml  et.tsv  et.yaml  eu.tsv  eu.yaml  fa.yaml  fi.tsv  fi.yaml  fr.tsv  fr.yaml  gl.tsv  gl.yaml  hr.tsv  hr.yaml  hu.yaml  is.tsv  is.yaml  it.tsv  it.yaml  ja.yaml  mk.tsv  mk.yaml  nl.yaml  no.tsv  (+14 more)
scripts/: requirements-emr.txt  requirements-simple.txt  requirements.txt  setup.py
src/: Makefile  Makefile.LastModified  Makefile.am  Makefile.in  acronyms.c  acronyms.h  address_dictionary.c  address_dictionary.h  address_dictionary_builder.c  address_expansion_data.c  address_expansion_rule.h  address_parser  address_parser.c  address_parser.h  address_parser_cli.c  address_parser_io.c  address_parser_io.h  address_parser_test.c  address_parser_train.c  averaged_perceptron.c  averaged_perceptron.h  averaged_perceptron_tagger.c  averaged_perceptron_tagger.h  averaged_perceptron_trainer.c  averaged_perceptron_trainer.h  bench  bench.c  bloom.c  bloom.h  build_numex_table  cartesian_product.c  cartesian_product.h  chunked_shuffle  collections.h  config.h  constants.h  crf.c  crf.h  crf_context.c  crf_context.h  (+130 more)
src/.deps/: address_parser-address_parser_cli.Po  address_parser-json_encode.Po  address_parser-string_utils.Po  address_parser-strndup.Po  address_parser_test-address_dictionary.Po  address_parser_test-address_parser.Po  address_parser_test-address_parser_io.Po  address_parser_test-address_parser_test.Po  address_parser_test-averaged_perceptron.Po  address_parser_test-averaged_perceptron_tagger.Po  address_parser_test-crf.Po  address_parser_test-crf_context.Po  address_parser_test-features.Po  address_parser_test-file_utils.Po  address_parser_test-float_utils.Po  address_parser_test-graph.Po  address_parser_test-graph_builder.Po  address_parser_test-ngrams.Po  address_parser_test-normalize.Po  address_parser_test-numex.Po  address_parser_test-sparse_matrix.Po  address_parser_test-string_utils.Po  address_parser_test-strndup.Po  address_parser_test-tokens.Po  address_parser_test-transliterate.Po  address_parser_test-trie.Po  address_parser_test-trie_search.Po  address_parser_test-trie_utils.Po  address_parser_test-unicode_scripts.Po  address_parser_train-address_dictionary.Po  address_parser_train-address_parser.Po  address_parser_train-address_parser_io.Po  address_parser_train-address_parser_train.Po  address_parser_train-averaged_perceptron.Po  address_parser_train-averaged_perceptron_tagger.Po  address_parser_train-averaged_perceptron_trainer.Po  address_parser_train-crf.Po  address_parser_train-crf_context.Po  address_parser_train-crf_trainer.Po  address_parser_train-crf_trainer_averaged_perceptron.Po  (+166 more)
src/.libs/: address_parser  bench  libpostal  libpostal.lai  near_dupe_test
src/cmp/: cmp.c  cmp.h
src/geohash/: geohash.c  geohash.h
src/geohash/.deps/: libpostal_la-geohash.Plo
src/klib/: drand48.c  drand48.h  khash.h  klist.h  ksort.h  kvec.h
src/klib/.deps/: libscanner_la-drand48.Plo
src/linenoise/: linenoise.c
src/linenoise/.deps/: address_parser-linenoise.Po
src/log/: log.c  log.h
src/murmur/: murmur.c  murmur.h
src/sds/: sds.c  sds.h
src/sparkey/: LICENSE  Makefile.am  MurmurHash3.c  MurmurHash3.h  buf.c  buf.h  endiantools.c  endiantools.h  hashalgorithms.c  hashalgorithms.h  hashheader.c  hashheader.h  hashiter.c  hashiter.h  hashreader.c  hashwriter.c  logheader.c  logheader.h  logreader.c  logwriter.c  returncodes.c  sparkey-internal.h  sparkey.h  util.c  util.h
src/utf8proc/: utf8proc.c  utf8proc.h  utf8proc_data.c
src/utf8proc/.deps/: address_parser-utf8proc.Po  address_parser_test-utf8proc.Po  address_parser_train-utf8proc.Po  build_address_dictionary-utf8proc.Po  build_numex_table-utf8proc.Po  build_trans_table-utf8proc.Po  language_classifier-utf8proc.Po  language_classifier_test-utf8proc.Po  language_classifier_train-utf8proc.Po  libpostal-utf8proc.Po  libpostal_la-utf8proc.Plo  near_dupe_test-utf8proc.Po  test_libpostal-utf8proc.Po
test/: Makefile  Makefile.am  Makefile.in  greatest.h  test.c  test_crf_context.c  test_expand.c  test_libpostal  test_numex.c  test_parser.c  test_string_utils.c  test_transliterate.c  test_trie.c  test_utils.c
test/.deps/: test_libpostal-test.Po  test_libpostal-test_crf_context.Po  test_libpostal-test_expand.Po  test_libpostal-test_numex.Po  test_libpostal-test_parser.Po  test_libpostal-test_string_utils.Po  test_libpostal-test_transliterate.Po  test_libpostal-test_trie.Po
test/.libs/: test_libpostal
versions/: base_data
windows/: configure.ac
windows/src/: Makefile.am
(+1860 files in other folders)
